# The_final_assignment_for_the_course

./: pyproject.toml
Final_progect/: pyproject.toml
Hashing and Security/: HashPasswordClient.py
app/authenticate/: apps.py
app/core/: settings.py
