[project]
name = "final-progect"
version = "0.1.0"
description = ""
authors = [
    {name = "borisich666",email = "160366693+borisich666@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
